@@ -64,6 +64,7 @@
 #include "xpm/rune.xpm"
 #include "xpm/descent3.xpm"
 #include "xpm/ut2.xpm"
+#include "xpm/ut2004.xpm"
 
 #include "xpm/gamespy3d.xpm"
 #include "xpm/ssam.xpm"
