@@ -1,0 +1,36 @@
+/* XPM */
+static char * ut2004_xpm[] = {
+"16 16 17 1",
+" 	c None",
+".	c #1C1835",
+"+	c #D8B374",
+"@	c #A9864E",
+"#	c #7F674E",
+"$	c #4A49E5",
+"%	c #554F60",
+"&	c #725E72",
+"*	c #2F2E9E",
+"=	c #E9D6B3",
+"-	c #8880C6",
+";	c #433F69",
+">	c #D4C0AC",
+",	c #6763C9",
+"'	c #212063",
+")	c #CA984B",
+"!	c #A2918B",
+"                ",
+"                ",
+"        --,     ",
+"      !,,$$,,   ",
+"    >=-$,,>&*,+ ",
+"   >===**=>''; =",
+"   )%>=''=>''' >",
+"  +$*++''+)'.' @",
+"> %**!@''+)..%  ",
+"+ **')@'.>).'   ",
+"@ *''))#-+)@#   ",
+"  %'*@)+@&@#    ",
+"   %...%.;      ",
+"     %%%        ",
+"                ",
+"                "};
