@@ -111,6 +111,7 @@ enum server_type {
   HR_SERVER,
   UN_SERVER,
   UT2_SERVER,
+  UT2004_SERVER,
   RUNE_SERVER,
   POSTAL2_SERVER,
   AAO_SERVER,
